# proposal_system

./: .gitignore  Draft.md  Draft_raw.md  check_db.py  draft_data_debug.json  enhanced_data_debug.json  fix_tsx.py  hwpx_history.md  hwpxtopdf_example.txt  implementation_plan.md  kiill_server.bat  main.py  migrate_name.py  planweaver.db-shm  project_structure.md  proposal_service.bat  proposal_service.vbs  pyproject.toml  requirements.txt  task.md
frontend/: fix_tsx.cjs  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AnalysisWorkflow.tsx  BillingView.tsx  DocumentTree.tsx  ErrorRetryModal.tsx  Header.tsx  HwpxFormatModal.tsx  LoadingOverlay.tsx  ModelSelector.tsx  ProjectList.tsx  Sidebar.tsx  TreeNode.tsx  hwpx_lines.json
models/: database.py  project_models.py
routers/: project.py
scratch/: check_db_duplicates.py  check_db_mix_v2.py  db_check.py  db_detail_check.py  export_debug_json.py  inspect_tree_flags.py
scripts/: export_draft.py  export_draft_raw.py  migrate_usage_log.py
services/: gemini_service.py  gemini_service.py_fix_temp  hwpx_extractor.py  hwpx_service.py  notebooklm_service.py  parser_service.py  pdf_service.py  pyhwpx_service.py
tmp/: check_hwpx.py  check_status.py  debug_mapping.json  fix_workflow_type.py  inspect_db.py  reproduce_mapping_issue.py  test_final_generation.py  test_p.txt  test_prompt.py  tree_inspect.json
tmp_hwpx/: settings.xml
tmp_hwpx/Contents/: content.hpf  header.xml  section0.xml
tmp_hwpx/Preview/: PrvText.txt
(+2 files in other folders)
