[project]
name = "proposal-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.2",
    "google-genai>=1.68.0",
    "pydantic>=2.12.5",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "pywin32>=311",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]
